--- a/src/index.css
+++ b/src/index.css
@@ -5,18 +5,19 @@
 
   --white: #fff;
   --black: #000;
-  --gray-50: #f7f7f8;
-  --gray-100: #ececf1;
-  --gray-200: #d9d9e3;
-  --gray-300: #c5c5d2;
-  --gray-400: #acacbe;
-  --gray-500: #999;
-  --gray-600: #666;
-  --gray-700: #40414f;
-  --gray-800: #343541;
-  --gray-900: #202123;
-  --gray-950: #0f0f0f;
-  
+  --gray-50: #f9f9f9;
+  --gray-100: #ececec;
+  --gray-200: #e3e3e3;
+  --gray-300: #cdcdcd;
+  --gray-400: #b4b4b4;
+  --gray-500: #9b9b9b;
+  --gray-600: #676767;
+  --gray-700: #4e4e4e;
+  --gray-800: #333;
+  --gray-850: #262626;
+  --gray-900: #171717;
+  --gray-950: #0d0d0d;
+
   --text-primary: var(--gray-100);
   --text-secondary: var(--gray-300);
   --text-tertiary: var(--gray-500);
@@ -33,7 +34,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: var(--surface-secondary);
+  background-color: var(--surface-primary);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
